[gd_scene load_steps=4 format=3 uid="uid://dgpy42d0g364x"]

[ext_resource type="Script" path="res://pantalla_curativa.gd" id="1_mocj2"]
[ext_resource type="Texture2D" uid="uid://buemlrd0sgquh" path="res://pantalla_curativa.png" id="1_qulwt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5cl5"]
size = Vector2(87, 55.5)

[node name="pantalla_curativa" type="Area2D"]
collision_layer = 128
script = ExtResource("1_mocj2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_qulwt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_g5cl5")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
